--- a/manifest.json
+++ b/manifest.json
@@ -3,10 +3,10 @@
 	"version": "1.0",
 	"description": "This extension only allows chrome to open one window with one tab!",
 	"manifest_version": 2,
-	"permissions": ["storage", "declarativeContent", "activeTab"],
+	"permissions": ["storage", "tabs"],
 	//"options_page": "options.html",
 	"browser_action": {
-		"default_popup": "popup.html",
+		"default_popup": "html/popup.html",
 		"default_icon": {
 			"16": "images/get_started16.png",
 			"32": "images/get_started32.png",
@@ -21,7 +21,7 @@
 		"128": "images/get_started128.png"
 	},
 	"background": {
-		"scripts": ["background.js"],
+		"scripts": ["js/background.js"],
 		"persistent": false
 	}
 }
